# iron-tiger

./: .gitignore  CMakeLists.txt  Makefile
include/: actions.h  agent.h  agent_actions.h  map.h  peragent.h  peragent_list.h
src/: actions.c  agent_actions.c  main.c  map.c
